--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "element-ui": "^2.4.11",
     "less": "^3.11.1",
     "less-loader": "^6.0.0",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
